@@ -191,6 +191,9 @@ struct SO_PUBLIC Packet
     inline bool is_icmp() const
     { return ptrs.get_pkt_type() == PktType::ICMP; }
 
+    inline bool is_data() const
+    { return (ptrs.get_pkt_type() == PktType::USER) or (ptrs.get_pkt_type() == PktType::FILE); }
+
     inline bool is_cooked() const
     { return packet_flags & PKT_PSEUDO; }
 
