@@ -47,6 +47,7 @@ struct PAF_State     // per session direction
 };
 
 void paf_setup(PAF_State*);  // called at session start
+void paf_reset(PAF_State*);  // called for do overs
 void paf_clear(PAF_State*);  // called at session end
 
 static inline uint32_t paf_position (PAF_State* ps)
